package com.tca.designpattern.factory.simple_factory;

public interface IPizza {
	
	String type();

}
